created seed file and get all sessions route working

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "seed": "npx ts-node"
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
@@ -29,7 +30,6 @@
     "@nestjs/platform-express": "^8.0.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
-    "dotenv": "^10.0.0",
     "mongoose": "^5.13.8",
     "nestjs-command": "^3.0.2",
     "reflect-metadata": "^0.1.13",
@@ -49,6 +49,7 @@
     "@types/yargs": "^16.0.4",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
+    "dotenv": "^10.0.0",
     "eslint": "^7.30.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
