--- a/package.json
+++ b/package.json
@@ -27,11 +27,16 @@
     "@nestjs/config": "^1.0.1",
     "@nestjs/core": "^8.0.0",
     "@nestjs/mongoose": "^8.0.1",
+    "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "express-jwt": "^6.1.0",
+    "jwks-rsa": "^2.0.4",
     "mongoose": "^5.13.8",
     "nestjs-command": "^3.0.2",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
@@ -45,6 +50,7 @@
     "@types/hapi__joi": "^17.1.7",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.0.0",
+    "@types/passport-local": "^1.0.34",
     "@types/supertest": "^2.0.11",
     "@types/yargs": "^16.0.4",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
