--- a/package.json
+++ b/package.json
@@ -86,5 +86,8 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "engines": {
+    "node": "15.11.0"
   }
 }
